--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -90,7 +90,9 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="NewActionMapping_0",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
++ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="Run",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
 +AxisMappings=(AxisName="Forward/Backward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Right/Left",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="Forward/Backward",Scale=-1.000000,Key=S)
@@ -99,6 +101,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Forward/Backward",Scale=-1.000000,Key=Down)
 +AxisMappings=(AxisName="Right/Left",Scale=-1.000000,Key=Left)
 +AxisMappings=(AxisName="Right/Left",Scale=1.000000,Key=Right)
++AxisMappings=(AxisName="Look_Left/Right",Scale=1.000000,Key=MouseX)
++AxisMappings=(AxisName="Look_Up/Down",Scale=1.000000,Key=MouseY)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
